# rvz

./: .gitignore  CMakeLists.txt  README.md  build.zig  dev  package-lock.json  package.json
kernel/: build.sh  build.zig
kernel/src/: entry.S  layout.ld.tpl  layout_kernel.ld  riscv.zig  start.zig  uart.zig
splc/: bitfields.h  param.h  riscv.h  start.c  uart.c
splz/: build.sh  build.zig
splz/src/: uart.zig
src/: entry.S  kernel.ld  start.c
src/kernel/: main.zig
src/kernel/arch/: register.zig  riscv.zig  riscv32.zig  riscv64.zig
src/kernel/hal/: console.zig  mem.zig  riscv.zig  riscv32.zig  sys.zig
src/kernel/hal/d1-h/: clock.zig  led.zig  linker.lds  start.S  sys.zig  uart.zig
src/kernel/hal/jh7110/: clock.zig  linker.l2lim.lds  linker.lds  start.S  sys.zig  uart.zig
src/kernel/soc/: README.md  d1-h.svd  d1-h.zig  jh7110-m.zig  jh7110.svd  jh7110.zig  mmio.zig
tools/serial-term/: go.mod  main.go  serial-term
tools/splc/: CMakeLists.txt  clock.c  clock.h  entry.S  layout.ld  layout.ld.tpl  types.h  uart.h  uart8250.c
tools/splz/: build.sh  test.zig
tools/splz/src/: layout.ld.tpl  layout_spl.ld  main.zig  riscv.zig  start.zig
tools/vf2-programmer/: go.mod  main.go  splz.bin.normal.out  vf2-programmer
tools/vf2-uboot-fit-imager/: go.mod  main.go  vf2-uboot-fit-imager
tools/vf2flash/: ddrinit-2133-211102.bin.out  go.mod  go.sum  main.go  u-boot-spl.bin.normal.out  vf2flash
tools/xmodem/: go.mod  xmodem.go
tools/xmodem-pad/: go.mod  main.go  xmodem-pad
